dev/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  annotations: 
    sidecar.istio.io/inject: "true"
  name: rollouts-demo-host
  namespace: app-teste 
spec:
  replicas: 1
  revisionHistoryLimit: 10
  rollback:
    enabled: true  # Habilita o rollback
  selector:
    matchLabels:
      app: rollouts-demo-host
  template:
    metadata:
      labels:
        app: rollouts-demo-host
    spec:
      containers:
      - name: rollouts-demo-host
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
  strategy:
    canary:
      canaryService: canary-svc  # required
      stableService: stable-svc  # required
      trafficRouting:
        istio:
          virtualService:
            name: rollout-vsvc   # required
            routes:
            - primary            # optional if there is a single route in VirtualService, required otherwise
      steps:
      - setWeight: 5
      - pause:
          duration: 1m        
---
# apiVersion: autoscaling/v2beta2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: rollouts-demo-host
#   namespace: app-teste 
# spec:
#   maxReplicas: 10
#   minReplicas: 10
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 60
#   scaleTargetRef:
#     apiVersion: argoproj.io/v1alpha1
#     kind: Rollout
#     name: rollouts-demo-host
# ---
