dev/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: rollouts-ingress-canary
    namespace: app-teste
  spec:
    ingressClassName: nginx
    rules:
    - host: canary.space.local  #canary-demo.keeggo.com
      http:
        paths:
        - backend:
            service:
              name: canary-svc
              port:
                name: http
          path: /
          pathType: ImplementationSpecific
kind: List
metadata:
  resourceVersion: ""
---
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: rollouts-ingress-stable
    namespace: app-teste
  spec:
    ingressClassName: nginx
    rules:
    - host: standard-demo.keeggo.com
      http:
        paths:
        - backend:
            service:
              name: stable-svc
              port:
                name: http
          path: /
          pathType: ImplementationSpecific
kind: List
metadata:
  resourceVersion: ""
